--- a/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
+++ b/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
@@ -39,9 +39,6 @@
 \title{}
 
 
-
-
-
 \begin{abstract}
 \noindent
 %
@@ -56,7 +53,7 @@ Key words: ***
 \ % blank line
 
 \noindent
-Word count: 7 500
+Word count: *
 \end{abstract}
 
 \tolerance=5000
@@ -137,69 +134,72 @@ How can we distinguish a representation of an outcome from a representation of m
 We offer only a brief argument for this conclusion here because \citet{pacherie:2008_action} and \citet{butterfill:2012_intention} also argue for it; the latter further support this conclusion by appeal to the functions of motor processes in planning and monitoring action.
 }
 
-***HERE
-
-So far we have been arguing that some motor representations are about outcomes by contrasting this claim with the hypothesis that motor all representations concern merely kinematic features of action.  [*make more vivid!]  This is not quite enough for a convincing argument because some people have claimed that some motor representations in some way concern sensory consequences of actions.
+So far we have been arguing that some motor representations are about outcomes by contrasting this claim with the hypothesis that all motor representations concern merely kinematic features of action.  This is not quite enough for a convincing argument because some people have argued, convincingly, that some motor representations in some way concern sensory consequences of actions (*refs).
 To illustrate, grasping a small ball between your finger and thumb will have predictable tactile and visual consequences, and it is possible (at least in principle) that some motor representations involved in grasping the ball might somehow concern these sensory consequences.
 Note that the outcomes to which actions are directed are often distinct from any of the action's sensory consequences.
 Take grasping a ball again: although the outcome---the grasping of the ball---reliably has sensory consequences, these are neither necessary nor sufficient for the outcome to occur.  
-They are not necessary because the grasping could also be performed with a foot or a tool, which could substantially alter the sensory consequences of the action; and because grasping could also in principle occur in complete darkness with numb (or even deafferented) hands. 
+They are not necessary because grasping could also be performed with a foot or a tool, which could substantially alter the sensory consequences of the action; and because grasping could also in principle occur in complete darkness with numb hands.%
+\footnote{
+Here we leave open the question of whether there are actions with certain  proprioceptive sensory consequences that are necessary for the action to occur. 
+} 
 The sensory consequences are also not sufficient because in principle the pattern of movements of finger and thumb in relation to the ball could occur without there being any event directed to the grasping of an object---such movements might in principle occur as part of an exercise in moving one's fingers in which the ball is an unwanted distraction rather than a target.
-So our claim that motor representations represent outcomes is conceptually quite distinct from the claim that some motor representations in some way concern sensory consequences of actions: in principle, both claims might be true, or one might be true while the other is false.
+So our claim that motor representations represent outcomes is conceptually quite distinct from the claim that some motor representations might in some way concern sensory consequences of actions: in principle, both claims might be true, or one might be true while the other is false.
 
 Suppose, at least for the sake of argument, that some motor representations do indeed somehow concern sensory consequences of actions. 
-Does we still have grounds for holding that there are motor representations of outcomes?  Yes.  We noted just above that it is possible to vary the sensory consequences of an action while holding one of its outcomes constant.  
+Do we still have grounds for holding that there are motor representations of outcomes?  Yes.  We noted just above that it is possible to vary the sensory consequences of an action while holding one of its outcomes constant.  
 To return to the example, grasping a ball can be done with a hand, a foot or a tool.
-Using different effectors will alter how the action looks (its visual consequences) but not the goal to which it is directed. 
-So the fact that observing instances of all three types of action can involve a common motor representation shows that not all motor representations can concern sensory consequences and merely kinematic features only.
+Using different effectors will alter how the action looks (its visual consequences), sounds and feels but not the goal to which it is directed. 
+So the fact that observing instances of all three types of action can involve a common motor representation shows that not all motor representations concern either sensory consequences or merely kinematic features only.  
+Motor representations of outcomes are also needed.
 
-***The claim that some motor representations represent outcomes raises two further questions.  First, which outcomes can be represented motorically?  And, second, what (if anything) ensures that an outcome represented motorically in action observation is an outcome to which the observed action is directed?
-
-Actions are typically directed to many outcomes.  For instance, a single action might be directed to grasping the scissors, to cutting a newspaper and to removing a particularly useful article to file later.  In reaching for the scissors the agent is already performing actions directed to all of these outcomes.  Which outcomes can be represented motorically?  Not all outcomes can be represented motorically, of course.  For instance, the difference between cutting out an article and cutting out a picture from a newspaper is not a difference that need be captured by any motor representations.  One idea about which outcomes can be represented motorically starts from the observation that outcomes can be partially ordered by the means-end relation. It might be assumed that motor representations capture only least outcomes relative to the means-end ordering.  This is wrong, however.  Differences such as that between reaching for a pair of scissors to cut something and reaching for a pair of scissors to place them somewhere (perhaps to put them away) are captured by motor representations (\citealp{Fogassi:2005nf, cattaneo:2007_impairment, bonini:2010_ventral}). This suggests that motor representations are not limited to representing least outcomes.  
-
-
-  
-[*So the plan is to end this section after arguing that mr don't represent directedness, and then have a new section break on 'Capturing without representing'.  The Q. for that section might be: What sort of process links the outcome represented to the observed action and ensures that the outcome represented is one to which the action is directed?]
+The claim that some motor representations represent outcomes raises a further question.  Which outcomes can be represented motorically?  
+This question arises because actions are typically directed to many outcomes.  For instance, a single action might be directed to grasping the scissors, to cutting a newspaper and to removing a particularly useful article to file later.  In reaching for the scissors the agent is already performing actions directed to all of these outcomes.  Which outcomes can be represented motorically?  Not all outcomes can be represented motorically, of course.  For instance, the difference between cutting out an article and cutting out a picture from a newspaper is not a difference that need be captured by any motor representations.  One idea about which outcomes can be represented motorically starts from the observation that outcomes can be partially ordered by the means-end relation. It might be assumed that motor representations capture only least outcomes relative to the means-end ordering.  This is wrong, however.  Differences such as that between reaching for a pair of scissors to cut something and reaching for a pair of scissors to place them somewhere (perhaps to put them away) are captured by motor representations (\citealp{Fogassi:2005nf, cattaneo:2007_impairment, bonini:2010_ventral}). This suggests that motor representations are not limited to representing least outcomes.  
 
 
-\subsection{Directedness}
-Our overall question is how motor representation could enable goal ascription judgements. The fact that motor representations can represent outcomes is a step towards answering this question. However we are not yet in a position to answer it. To see why, consider that someone might (at least in principle) observe an action and represent an outcome without yet relating the outcome to the action. Kate is observing Ludwig kick a ball. Kate has represented this outcome, the ball's being kicked, but she does not represent the outcome as in any way related to Ludwig's action. Rather, she simply finds herself somehow disposed to kick the ball. This is not because she intends to pass the ball back to Ludwig or to compete with him or because of any intention concerning Ludwig: it is just because representing the outcome has suggested to her the possibility of performing this action. So Kate represents the outcome to which Ludwig's action is directed but she does not identify that outcome as a goal to which his action is directed. (She does not relate the outcome to his action at all.)  More would be required for goal ascription. To ascribe a goal to an action involves not only representing the action and the outcome which is the goal but also relating the outcome to the action.
+\section{How to capture the directedness of a goal-directed action}
+Our overall question is how motor representation could facilitate judgements about the goals of observed actions. We have just argued that motor representations which occur in action observation can represent outcomes. Now it would be natural to suppose that these outcomes are sometimes outcomes to which the observed actions are directed, and that this is no accident.  But the argument so far provides no clue as to what might ensure this, as it is silent on processes linking the outcome represented to the observed action.  What (if anything) ensures that an outcome represented motorically in action observation is an outcome to which the observed action is directed?  
 
-It is important in what follows that we sometimes represent intentions without linking them to actions.  For instance, you might know that a friend intends to break an egg and see the friend handling an egg which breaks without yet knowing whether this breaking was appropriately related to that intention.  To represent an intention and an action does not necessarily involve representing any relation between the action and the intention.
+To see the force of this question, note that there is a distinction between merely representing outcomes---which may in fact be outcomes to which certain actions are directed---and representing outcomes as outcomes to which a particular action is directed. This point applies to representations generally, including both motor representations and intentions.  For instance, you might know that a friend intends to break an egg (and so represents an outcome, namely an egg's breaking) and see the friend handling an egg which breaks without yet knowing whether this breaking was appropriately related to that intention.  To represent an outcome and an action does not necessarily involve representing any relation between them.  Our first task, then, is to consider whether some motor representations might somehow represent, not merely outcomes, but also the directedness of particular actions to certain outcomes.  
 
-How might the directedness of actions to outcomes be represented or otherwise captured? In philosophy the notion of goal-directedness is standardly explained in terms of intention: for an action to be directed to a outcome is for the action to be appropriately related to an intention whose content specifies that outcome (or, on some views, an intention specifying an appropriately related outcome). Given this, it is perhaps natural to suppose that ascribing a particular goal to a given action might involve representing that action, representing an intention whose content specifies the goal, and representing the action as appropriately related to the intention.  If so, motor representation could have at most a limited role in goal ascription.  After all, no motor representation represents an intention.
+But how might the directedness of an action to an outcome be represented? The notion of goal-directedness is standardly explained in terms of intention: for an action to be directed to an outcome is for the action to be appropriately related to an intention whose content specifies that outcome (or, on some views, an intention specifying an appropriately related outcome---see \citealp{Bratman:1984jr}). Given this view, no motor representation could represent the directedness of an action to an outcome.  After all, no motor representation represents an intention.  
 
-The problem is not significantly different if we suppose that goal-directedness can be explained in terms of mental representations other than intentions.  For instance, some have argued that the directedness of an action to an outcome can be explained in terms of motor representation and not only in terms of intention \citep{butterfill:2012_intention}.  Suppose for the sake of argument that this is correct. We still face substantially the same puzzle about how motor representation in goal ascription could capture the directedness of an action to an outcome.  For motor representations do not represent any mental representations at all.  So the directedness of an action to an outcome cannot be represented motorically.
+There are, of course, other attempts to explicate the notion of goal-directedness.  For instance, some have argued that the directedness of some actions to particular outcomes can be explained in terms of motor representation and not only in terms of intention \citep{butterfill:2012_intention}.  This changes nothing, however.  For motor representations do not represent any representations at all.  So the directedness of an action to an outcome cannot be represented motorically.
 
-One way to avoid our argument for this conclusion would be to claim that the directedness of an action to a goal can be understood in ways that do not involve intention or indeed any representation.  For instance, an action's being directed to an outcome may consist in its having the function of bringing about that outcome. Here function could be construed teleologically. Teleological accounts of function, and of the application of this notion to understanding goal-directed action, have been extensively developed (*see further Godfrey-Smith 1996; Millikan 1984; Neander 1991; Price 2001; Wright 1976). Suppose we accept for the sake of argument  that goal-directedness can be explained in terms of function rather than intention or any other kind of mental representation.  Substantially the same puzzle remains. After all, motor representations no more represent functions than they represent intentions.
-
-At this point it seems to us plausible that motor representations cannot represent the directedness of an action to an outcome. If we supposed that all goal ascription involved representing directedness, it would be hard to understand the role of motor representation in enabling goal ascription.  But it would be a mistake to suppose that directedness must be represented in goal ascription.  There are ways of capturing directedness which do not involve representing it.  In the rest of this section we shall argue that in goal ascription the link between actions and outcomes to which they are directed can be captured not only by representing it but alternatively by a planning-like process which involves determining how an outcome is to be achieved and whether given movements are appropriate to achieving that outcome.  
-
-To see how the directedness of an action to an outcome can be captured without being represented, let us first step back to consider cases of goal ascription which involve representing intentions only (so motor representation is not yet in the picture). Observing Ayesha gathering some papers during a long meeting that shows no sign of ending, you conjecture that she is intending to leave discretely. You use this conjecture about Ayesha's intention to determine one or more likely sequences of behaviours, almost as if you were planning from her point of view how to act on that intention. This leaves you with expectations concerning how she will act. You might be waiting for Ayesha, who has no other friends present, to give you a nod before quietly pushing away from the table. If what you observe matches these expectations, or if there are only deviations that can be explained in ways consistent with your conjecture about Ayesha's intention, then you may come to regard the conjecture as confirmed. But if there is a mismatch---if, for example, Ayesha signals that she wants attention and looks around to see whether people are looking at her---then you might reject the conjecture about her intention to leave discretely. As this illustrates, goal ascription often (perhaps not always) involves determining how an action will or would unfold, and this process of determination may ensure that there is a reliable connection between the action's being directed to a certain goal and your ascribing that goal to the action. So the directedness of an action to a goal can be captured by a planning-like process in addition to being represented.
-
-You might suggest that where an observer represents another agent's intention, she would only ever determine how the agent will act if she also supposes the actions will be directed to fulfilling this intention.  This may be right.  The illustration is only supposed to show that goal-directedness could in principle be captured without being represented.
-
-Motor representations and processes may likewise capture the directedness of an action to an outcome.  In action observation it is not just that there may be motor representations of outcomes. There is evidence that a motor representation of an outcome sometimes causes a determination of which movements are likely to be performed to achieve that outcome  \citep{kilner:2004_motor, urgesi:2010_simulating}. The processes involved in determining how observed actions are likely to unfold given their outcomes are closely related, or identical, to processes involved in performing actions. This is suggested both by the involvement of regions of the brain associated with action (*refs), and by patterns of facilitation and interference which occur when simultaneously observing and performing actions \citep{brass:2000_compatibility, kilner:2003_interference, craighero:2002_hand}. It is almost as if the observer were planning from the agent's point of view how to act. These planning-like processes sometimes leave observers with expectations about how an action will unfold.  For instance, if you were to observe just the early phases of a grasping movement your eyes may jump to its likely target, ignoring nearby objects \citep{ambrosini:2011_grasping}. These proactive eye movements resemble those you would typically make if you were acting yourself \citep{Flanagan:2003lm}: in reaching for something, it is natural to look at the target rather than your hand.  Importantly, the occurrence of such proactive eye movements in action observation depends both on representing the outcome of an action (even temporary interference in your ability to represent the outcome will interfere with the eye movements,  \citealp{Costantini:2012fk}) and also on planning-like processes (having to perform actions incongruent with those you are observing also interferes with proactive eye movements, \citealp{Costantini:2012uq}).  Finally, going slightly beyond what there is currently direct evidence for, it is also plausible that whether the expectations about how the action will unfold are met or not will influence whether the motor representation of that outcome persists.  This ensures that, where someone is observing an action, there is a reliable connection between the observer representing an outcome and the action being directed to that outcome.  There is a sense, then, in which the directedness of an action to a goal can be captured by motor representations and processes: As might also happen in the case of intention, the directedness of the action to a goal is captured by planning-like processes.  
-
-Let us stipulate that to capture the directedness of an action to an outcome is to (a) represent the action; and to (b) determine how the action is likely to unfold given that it would normally realise that outcome; where (c) this determination leaves the observer with expectations about how the action will unfold; and (d) whether the representation of the outcome persists depends on the expectations being met.  We have been arguing that there is evidence that motor representations and processes can capture the directedness of actions. 
-
-It is perhaps worth pausing here to stress a parallel between performing and observing actions. Start with performance.  In virtue of what is an action related to the outcome or outcomes to which it is directed?  Suppose that in performing an action there is a motor representation of an outcome.  Now an action is not directed to an outcome just in virtue of there being a representation of that outcome, of course.  Rather the outcome has to play some guiding role in determining how the action will unfold.  So what makes it the case that the action is directed to the outcome is not just the content of the representation but also its role in determining how the action is to unfold.  Now switch to action observation.  How might an observer capture the directedness of an action to an outcome?  As in performing an action, there is sometimes a motor representation of an outcome and a process of working out how the action will unfold, as we have seen.  But unlike performing action, in observation the process of working out how the action will unfold does not normally directly cause of the action (of course).  So if expectations about how the action will unfold are not met, it is not normally possible to alter the action; instead it may be necessary to link the action to an outcome different from the one whose representation generated these unmet expectations.  This is how the representations and processes which ground the directedness of actions to outcomes in performing actions may also be involved in capturing the directedness in observing actions.
-%
-\begin{quote}
-[***\textit{A previous, rough attempt at the above paragraph}:  \\
-grounding /capturing: In performing an action there is a representation of an outcome.  Now an action is not directed to an outcome just in virtue of there being a representation of that outcome, of course.  Rather the outcome has to play some guiding role in working out how the action will unfold.  So what determines that the action is directed to the outcome is both the representation and the process of working out how the action is to unfold.  Now the case of action observation is similar.  There is a representation of an outcome and a process of working out how the action will unfold.  A difference is that the process of working out how the action will unfold is not (of course) normally a cause of the action.  So the representations and processes which ground the directedness of actions to outcomes in performing actions: these representations and processes also capture the directedness in observing actions.]
-\end{quote}
-
-In this section we have considered a first obstacle to understanding how judgements about the goals of actions sometimes depend on motor representations.  The obstacle was that motor representations might appear not to concern the goals of actions at all, making their influence on judgements about goals difficult to understand.  In removing this obstacle we made two points.  The first was that motor representations do not all represent merely kinematic features of action; rather, some motor representations represent outcomes to which actions are directed.  The second point was that although motor representations probably do not represent the directedness of an action to an outcome, reflection on the role of motor representations and processes in action observation shows that this directedness can be captured motorically.  Potentially, then, there is a respect in which the content of a motor representation may resemble the content of judgement about the goal to which an action is directed: they may represent a single outcome and capture the directedness of an action to that outcome.  
-We therefore propose that where a judgement about the goal to which an action is directed depends on motor representations, there is a motor representation of an outcome which captures the directedness of the action to the goal.%
+One way to avoid our argument for this conclusion would be to claim that the directedness of an action to a goal can be understood in ways that do not involve intention or any representation at all.  For instance, consider the idea that an action's being directed to an outcome may consist in its having the function of bringing about that outcome, where function might be construed teleologically.%
 \footnote{
-***Do we need to allow that the outcomes represented motorically and in judgement may not be identical?
+Teleological accounts of function, and of the application of this notion to understanding goal-directed action, have been extensively developed (*see further Godfrey-Smith 1996; Millikan 1984; Neander 1991; Price 2001; Wright 1976).
+} 
+Even if we accepted this idea, we would still have to conclude that motor representations do not represent goal-directedness. After all, motor representations no more represent functions than they represent representations.
+
+If, as we have suggested, motor representations can represent outcomes but not the directness of actions to outcomes, what (if anything) might ensure that, when someone observes a particular action, outcomes she represents motorically are outcomes to which that action is directed? We must face this question because if it turned out that it was only ever a coincidence that outcomes represented motorically in action observation are outcomes to which the observed action is directed, then it would be hard to understand the role of motor representation in facilitating judgments. In the rest of this section we shall argue that the directedness of an action to an outcome could be captured motorically by means of a planning-like process which involves determining how an outcome is to be achieved and whether given movements are appropriate to achieving that outcome.
+
+To see how this might work, let us step back, momentarily, from motor phenomena to introduce the idea with an illustration.  Observing Ayesha gathering some papers during a long meeting that shows no sign of ending, you conjecture that a goal of these and her next actions will be to leave discretely. You use this conjecture about the outcome to which Ayesha's actions are directed to determine one or more likely sequences of behaviours, almost as if you were planning from her point of view how to achieve that outcome. This leaves you with expectations concerning how she will act. You might be waiting for Ayesha, who has no other friends present, to give you a nod before quietly pushing away from the table. If what you observe matches these expectations, or if there are only deviations that can be explained in ways consistent with your conjecture about the goal of Ayesha's actions, then you may come to regard the conjecture as confirmed. But if there is a mismatch---if, for example, Ayesha signals that she wants attention and looks around to check people are looking at her---then you might reject the conjecture about the goal of her actions being to leave discretely. As this illustrates, determining how an action will or would unfold and then monitoring how it does unfold can ensure that there is a reliable connection between the action's being directed to a certain outcome and your representing that outcome. So the directedness of an action to a goal can be captured by a planning-like process together with appropriate monitoring.
+
+In outline the link between an action and an outcome to which it is directed can be maintained like this. The representation of an outcome leads to a planning-like process which generates predictions about how the action will unfold, and this representation is weakened to the extent that the predictions are not met.  This is how planning processes can be coopted to ensure that an outcome represented is likely to be an outcome to which the observed action is directed.
+
+Could motor processes capture the directedness of an action to an outcome in this way? In action observation it is not just that there may be motor representations of outcomes. There is also evidence that a motor representation of an outcome sometimes causes a determination of which movements are likely to be performed to achieve that outcome  \citep{kilner:2004_motor, urgesi:2010_simulating}. The processes involved in determining how observed actions are likely to unfold given their outcomes are closely related, or identical, to processes involved in performing actions. This is suggested both by the involvement of regions of the brain associated with action (*refs), and by patterns of facilitation and interference which occur when simultaneously observing and performing actions \citep{brass:2000_compatibility, kilner:2003_interference, craighero:2002_hand}. It is almost as if the observer were planning the agent's actions. 
+
+Planning-like processes in action observation have also been demonstrated by measuring observers’ predictive gaze.  If you were to observe just the early phases of a grasping movement your eyes may jump to its likely target, ignoring nearby objects \citep{ambrosini:2011_grasping}. These proactive eye movements resemble those you would typically make if you were acting yourself \citep{Flanagan:2003lm}: in reaching for something, it is natural to look at the target rather than your hand.  Importantly, the occurrence of such proactive eye movements in action observation depends both on representing the outcome of an action (even temporary interference in the observer's ability to represent the outcome will interfere with the eye movements, \citealp{Costantini:2012fk}) and also on planning-like processes (requiring the observer to perform actions incongruent with those she is observing also interferes with proactive eye movements, \citealp{Costantini:2012uq}).  This, then, is further evidence that observers do something almost like planning the actions they observe.  
+
+We can now see how motor processes might ensure that an outcome represented is likely to be an outcome to which the observed action is directed.  As we have seen, there is evidence that observers represent outcomes motorically and that planning-like processes generate expectations about how the actions will unfold given these outcomes.  To take a tiny step further, we conjecture that, in action observation, motor representations of outcomes are weakened to the extent that the expectations they generate are unmet \citep[compare][]{Fogassi:2005nf}. This is how the directedness of action to an outcome can be captured motorically even in the absence of any representation of intention or function.
+
+Let us sum up so far. Our overall question is how motor representations could ever facilitate judgements about the goals of actions.  Our focus until now has been relations between the contents of judgements and the contents of motor representations.  
+In the previous section we argued that motor representations do not all represent merely kinematic features of action; rather, some motor representations represent outcomes to which actions are directed.  
+This led us to ask (in the present section), how the directedness of an action to an outcome might be captured motorically.
+We argued that motor representations probably do not represent the directedness of an action to an outcome, but explained how directedness can be captured by planning-like motor processes which occur in action observation.  Potentially, then, there is a respect in which the content of a motor representation may resemble the content of judgement about the goal to which an action is directed: there may be an outcome which both represent, and both may  capture the directedness of an action to that outcome.  
+We therefore conjecture that where motor representation facilitates a judgement about the goal to which an action is directed,
+there is a motor representation of this outcome, or of a related outcome, and a planning-like motor process which captures the directedness of the action to the outcome.  Motor representations can facilitate judgements about the goals of actions because the goals can be represented motorically and because the directedness of actions to those goals can be captured motorically.
+
+This conjecture---that motor representation not only facilitates judgements but also does so partly by virtue of the contents of motor representations matching those of judgements---is surprising to the extent that it is natural to suppose that motor representation is isolated from judgement.  While the evidence all but forces us to accept the conjecture, this conjecture, far from answering our overall question, only serves to make more mysterious the facilitatory effect of motor representations on judgements about the goals of actions. How could motor representations have content-respecting influences on judgements?%
+\footnote{
+It may be tempting to make a radical move by supposing that there are direct inferential relations between motor representation and thought.  However there are good arguments for denying that motor representations are inferentially integrated with the thoughts involved in explicit judgements about the goals of observed actions \citep{butterfill:2012_intention}.
 }
 
 
-\section{Action and Experience}
+
+\section{Experience of Action}
 \label{sec:processes}
-Our overall question is how judgements about the goals of actions could ever depend on motor representations.  The previous section concerned the possibility of a match between the contents of motor representations and judgements.  Now to say that two varieties of representations---motor representations and judgements---sometimes have nonaccidentally matching contents is not yet to explain how that match might come about.  Which processes could be responsible for the match?  When judgements about the goals of observed actions depend on the observers' motor representations, which processes connect motor representations to judgements?  
+Now to say that two varieties of representations---motor representations and judgements---sometimes have nonaccidentally matching contents is not yet to explain how that match might come about.  Which processes could be responsible for the match?  When judgements about the goals of observed actions depend on the observers' motor representations, which processes connect motor representations to judgements?  
 
 In broad terms, our will be proposal is that the dependence of observational judgements on motor representations goes via experience.  It is because motor representations can affect our experiences when we observe actions that those motor representations can facilitate judgements about these actions.  However this is consistent with two quite different hypotheses concerning the experiences associated with observing action.
 
@@ -304,9 +304,3 @@ MR<----> Action Judgment (action concept) <----> B \& D Judgment (b\&d concept)
 
 
 
-
-
-
-\bibliography{$HOME/endnote/phd_biblio}
-
-\end{document}
